--- a/daemons/gptp/windows/daemon_cl/daemon_cl.vcxproj.filters
+++ b/daemons/gptp/windows/daemon_cl/daemon_cl.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClCompile Include="..\..\common\ptp_message.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(RtI210Dir)\..\common\RtdLibApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
