--- a/examples/mrp_client/Makefile
+++ b/examples/mrp_client/Makefile
@@ -2,7 +2,7 @@ OPT=-O2
 CFLAGS=$(OPT) -Wall -Wextra -Wno-parentheses -ggdb
 
 ifeq ($(ARCH),arm)
-CC?=arm-none-linux-gnueabi-gcc
+CC=arm-none-linux-gnueabi-gcc
 else
 CC?=gcc
 endif
