--- a/examples/live_stream/Makefile
+++ b/examples/live_stream/Makefile
@@ -1,13 +1,13 @@
 CC?=gcc
 OPT=-O2 -g
 CFLAGS=$(OPT) -Wall -Wextra -Wno-parentheses
-INCFLAGS=-I ../../lib/igb/ -I../../daemons/mrpd -I../common -I../../daemons/common
+INCFLAGS=-I ../../lib/igb/ -I../../daemons/mrpd -I../common -I../../lib/common -I../../daemons/common
 LDLIBS=-ligb -lpci -lrt -lpthread
 LDFLAGS=-L ../../lib/igb/
 
 all: talker listener
 
-talker: talker.o ../common/avb.o ../common/talker_mrp_client.o
+talker: talker.o ../../lib/common/avb.o ../common/talker_mrp_client.o
 
 talker.o: talker.c
 	$(CC) $(CFLAGS) $(INCFLAGS) $(EXTRA_FLAGS) -c talker.c
@@ -15,7 +15,7 @@ talker.o: talker.c
 ../common/talker_mrp_client.o: ../common/talker_mrp_client.c ../common/talker_mrp_client.h
 	make -C ../common/ talker_mrp_client.o
 
-listener: listener.o ../common/avb.o ../common/listener_mrp_client.o
+listener: listener.o ../../lib/common/avb.o ../common/listener_mrp_client.o
 
 listener.o: listener.c
 	$(CC) $(CFLAGS) $(INCFLAGS) $(EXTRA_FLAGS) -c listener.c
@@ -23,8 +23,8 @@ listener.o: listener.c
 ../common/listener_mrp_client.o: ../common/listener_mrp_client.c ../common/listener_mrp_client.h
 	make -C ../common/ listener_mrp_client.o
 
-../common/avb.o: ../common/avb.c ../common/avb.h
-	make -C ../common/ avb.o
+../../lib/common/avb.o: ../../lib/common/avb.c ../../lib/common/avb.h
+	make -C ../../lib/common/ avb.o
 
 %: %.o
 	$(CC) $(LDFLAGS) $^ $(LDLIBS) $(EXTRA_FLAGS) -o $@
